# 3d-printed-spring

./: .gitignore  .mcp.json  DESIGN.md  LICENSE  README.md  pyproject.toml
exports/: big_ring_80mm.step  big_ring_80mm_support_free.step  spring_isotropic.step  spring_isotropic.stl
scripts/: sweep_294hz.py  sweep_isotropy.py
src/spring/: __init__.py  spring.py  validate.py
wso2/: README.md  wso2_artwork.step  wso2_artwork.stl  wso2_logo_3d.py  wso2_logo_3d.step  wso2_plate.step  wso2_plate.stl
